--- a/react-localstorage-loggin/src/index.css
+++ b/react-localstorage-loggin/src/index.css
@@ -25,7 +25,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -43,6 +42,8 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  padding: 0.3rem;
+  margin: 0.3rem;
 }
 button:hover {
   border-color: #646cff;
